ipc/ipdl/test/ipdl/error/maybe_Recursive.ipdl
//error: bad syntax near `?'

[ChildProc=any]
protocol maybe_Recursive {
child: async Msg(int?? aa);
};
